[#1870] Corrected file-upload spacing and added fullwidth button

--- a/src/open_inwoner/scss/components/Button/Button.scss
+++ b/src/open_inwoner/scss/components/Button/Button.scss
@@ -63,6 +63,11 @@
     }
   }
 
+  &--fullwidth {
+    display: block;
+    width: 100%;
+  }
+
   &#{&}--primary {
     background-color: var(--color-primary);
     border: 1px solid var(--color-primary);
@@ -168,6 +173,10 @@
 
   > .link__text {
     width: 100%;
+  }
+
+  &[hidden] {
+    display: none;
   }
 }
 
