--- a/src/open_inwoner/scss/components/Cases/CaseDetail.scss
+++ b/src/open_inwoner/scss/components/Cases/CaseDetail.scss
@@ -17,7 +17,7 @@
   #document-upload {
     color: var(--color-gray-dark);
     gap: 0;
-    padding: 0 0 var(--row-height-giant) 0;
+    padding: 0 0 var(--row-height) 0;
 
     &:invalid [type='submit'] {
       @extend .button--disabled;
@@ -29,20 +29,12 @@
       justify-content: center;
       pointer-events: none;
       width: 100%;
-
-      @media (min-width: 768px) {
-        width: initial;
-      }
     }
 
     .file-list,
     .form__actions {
       display: block;
       margin: 0;
-
-      @media (min-width: 768px) {
-        display: grid;
-      }
     }
 
     .p--upload-info {
